style/dynamic-module/tab-bar-vertical.css
/* 纵向排列选项卡页签 */
.layout__center [data-type='wnd'][data-id] {
  display: flex;
  flex-direction: row;
}
.layout__center [data-type='wnd'][data-id] > .fn__flex:not(.layout-tab-container) {
  flex-direction: column-reverse;
}
.layout__center [data-type='wnd'][data-id] > *:first-child {
  max-width: var(--custom-tab-bar-vertical-max-width);
  outline: 2px solid var(--b3-theme-on-surface-light);
}
.layout__center [data-type='wnd'][data-id] .layout-tab-bar {
  display: block;
}
.layout__center [data-type='wnd'][data-id] .layout-tab-bar .item .item__icon {
  padding-left: 0;
}
.layout__center [data-type='wnd'][data-id] .layout-tab-bar .item .item__text {
  text-align: unset;
}

